--- a/packages/react-app/src/index.css
+++ b/packages/react-app/src/index.css
@@ -11,3 +11,10 @@
 		min-height: 100vh;
 	}
   }
+
+  .inset-center {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+  }
