--- a/packages/react-app/index.css
+++ b/packages/react-app/index.css
@@ -18,3 +18,8 @@
 	left: 50%;
 	transform: translate(-50%, -50%);
 }
+
+[contenteditable='true']:empty:not(:focus):before {
+	content: attr(data-placeholder);
+	color: #9ca3af;
+}
