--- a/packages/react-app/index.css
+++ b/packages/react-app/index.css
@@ -10,6 +10,47 @@
 	body {
 		min-height: 100vh;
 	}
+
+	h1,
+	h2,
+	h3,
+	h4,
+	h5 {
+		@apply font-bold;
+		@apply my-4;
+	}
+
+	h1 {
+		@apply text-4xl;
+	}
+
+	h2 {
+		@apply text-3xl;
+	}
+
+	h3 {
+		@apply text-2xl;
+	}
+
+	h4 {
+		@apply text-xl;
+	}
+
+	h5 {
+		@apply text-lg;
+	}
+
+	a {
+		@apply text-blue-600 underline;
+	}
+
+	ul {
+		@apply list-disc list-inside;
+	}
+
+	ol {
+		@apply list-decimal list-inside;
+	}
 }
 
 .inset-center {
