--- a/packages/react-app/index.css
+++ b/packages/react-app/index.css
@@ -21,23 +21,23 @@
 	}
 
 	h1 {
-		@apply text-4xl;
-	}
-
-	h2 {
 		@apply text-3xl;
 	}
 
-	h3 {
+	h2 {
 		@apply text-2xl;
 	}
 
-	h4 {
+	h3 {
 		@apply text-xl;
 	}
 
-	h5 {
+	h4 {
 		@apply text-lg;
+	}
+
+	h5 {
+		@apply text-base;
 	}
 
 	a {
@@ -50,6 +50,14 @@
 
 	ol {
 		@apply list-decimal list-inside;
+	}
+
+	code {
+		@apply bg-gray-100 px-1 rounded-md;
+	}
+
+	.hljs {
+		@apply rounded-md text-sm;
 	}
 }
 
