--- a/packages/react-app/index.css
+++ b/packages/react-app/index.css
@@ -16,8 +16,7 @@
 	h3,
 	h4,
 	h5 {
-		@apply font-bold;
-		@apply my-4;
+		@apply font-bold my-4;
 	}
 
 	h1 {
@@ -71,4 +70,8 @@
 [contenteditable='true']:empty:not(:focus):before {
 	content: attr(data-placeholder);
 	color: #9ca3af;
+}
+
+.markdown img {
+	@apply w-2/3 mx-auto rounded-sm;
 }
